@@ -1,3 +1,8 @@
+2011-03-04  Mikael Djurfeldt  <mikael@djurfeldt.com>
+
+	* mpidep.cc (getRank): Support for Cray XE6.  (However, execvp in
+	the music launcher does not work on Cray.  Use option -e.)
+
 2010-07-28  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
 	* Release 1.0.7
